--- a/src/WebBundle/Resources/assets/less/task-show/task-show.less
+++ b/src/WebBundle/Resources/assets/less/task-show/task-show.less
@@ -77,6 +77,9 @@
     line-height: 42px;
     margin-bottom: 15px;
     margin-left: 20px;
+    // background: url(../../img/import_export.png);
+    cursor: url(../../img/import_export.png);
+    cursor: move;
     &:hover {
       background: #f3f3f3;
       .item-actions {
