--- a/src/WebBundle/Resources/views/Activity/activity-form-layout.html.twig
+++ b/src/WebBundle/Resources/views/Activity/activity-form-layout.html.twig
@@ -8,7 +8,7 @@
       <form class="form-horizontal" id="step2-form" >
         <div class="form-group">
           <div class="col-xs-2 control-label">
-          <label for="title">{{ '标题'|trans }}</label>
+          <label for="title">{{ '标题名称'|trans }}</label>
           </div>
           <div class="col-xs-10 controls">
             <input id="title" class="form-control" type="text" name="title" value={{ activity.title|default('') }} >
