--- a/src/WebBundle/Resources/views/TaskManage/list.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/list.html.twig
@@ -71,7 +71,7 @@
       <ul class="task-manage-list">
         <li class="task-manage-item task-manage-chapter clearfix">
           <div class="item-content">
-            <i class="es-icon es-icon-importexport mrm"></i>第<span class="number">1</span>章：11
+            </i>第<span class="number">1</span>章：11
           </div>
           <div class="item-actions">
             <span class="dropdown">
@@ -96,7 +96,7 @@
         </li>
         <li class="task-manage-item task-manage-unit clearfix">
           <div class="item-content">
-            <i class="es-icon es-icon-importexport mrm"></i>第<span class="number">1</span>节：111
+            </i>第<span class="number">1</span>节：111
           </div>
           <div class="item-actions">
             <a class="btn btn-gray">
