--- a/src/WebBundle/Resources/assets/less/main.less
+++ b/src/WebBundle/Resources/assets/less/main.less
@@ -1,6 +1,11 @@
-@import '../../../../../app/Resources/assets/libs/less/variable.less';
+@import '~libs/less/variable.less';
+
+@import './common.less';
 
 @import './component/load-animation.less';
+@import './component/drag.less';
+
+@import './module/task-list.less';
 
 @import './task-manage/task-manage.less';
 @import './task-show/task-show.less';
