--- a/src/WebBundle/Resources/views/TaskManage/list.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/list.html.twig
@@ -1,26 +1,9 @@
-{#{% extends 'TopxiaWebBundle::layout.html.twig' %}
-
-{% set script_controller = 'taskbundle/controller/task-manage/tasks' %}
-
-{% block title %}{{'教学计划管理'|trans}} - {{ parent() }}{% endblock %}
-
-{% block content %}
-	<button class="btn btn-info btn-sm" id="lesson-create-btn" data-toggle="modal" data-target="#modal" data-backdrop="static" data-keyboard="false" data-url="{{ path('course_manage_task_create', {courseId:1}) }}"><i class="glyphicon glyphicon-plus"></i> 任务 </button>
-
-	<ul id="course-tasks">
-		{% for task in tasks %}
-			{% include 'TaskBundle:TaskManage:list-item.html.twig' with {task:task} %}
-		{% endfor %}
-	</ul>
-	
-{% endblock %}#}
-
 {% extends 'TopxiaWebBundle:CourseManage:layout.html.twig' %}
 {% block title %}{{ '教学计划管理'|trans }} - {{ parent() }}{% endblock %}
 {% set use_webapck_loader = true %}
 
 {% do css(['web.css']) %}
-{% do script(['web/task-manage/index.js']) %}
+{% do script(['libs/jquery-sortable.js','web/task-manage/index.js']) %}
 
 {% block main %}
   <div class="panel panel-default panel-col lesson-manage-panel">
@@ -29,16 +12,6 @@
       <button class="btn btn-success btn-sm pull-right">发布计划</button>
     </div>
     <div class="panel-body">
-      {#<ul class="lesson-list sortable-list js-period-list" id="course-item-list" data-sort-url="{{ path('course_manage_lesson_sort', {id:course.id}) }}">
-      {% for id, item in items %}
-        {% if 'chapter' in id %}
-          {% include 'TopxiaWebBundle:CourseChapterManage:list-item.html.twig' with {chapter: item} %}
-        {% elseif 'lesson' in id  %}
-          {% include 'TopxiaWebBundle:CourseLessonManage:list-item.html.twig' with {lesson: item, file: files[item.mediaId]|default(null)} %}
-        {% endif %}
-      {% endfor %}
-      </ul>#}
-
       <!-- TODO  删除返回的课程数据，为任务加章节数据 -->
       <div class="task-manage-header clearfix">
         任务总数：<span class="color-warning space">{{tasks|length}}</span> 日均约需完成：<span class="color-warning">2.5</span> 个任务
@@ -67,8 +40,7 @@
           </div>
         </div>
       </div>
-      
-      <ul class="task-manage-list">
+      <ul class="task-manage-list sortable-list" id="sortable-list">
         <li class="task-manage-item task-manage-chapter clearfix">
           <div class="item-content">
             </i>第<span class="number">1</span>章：11
