--- a/src/WebBundle/Resources/views/Task/show.html.twig
+++ b/src/WebBundle/Resources/views/Task/show.html.twig
@@ -62,14 +62,18 @@
               {% endif %} 
                 left-menu"></i>
               {% if task.isOptional %}
-              <span class="label label-success mrm">选修</span>
+                <span class="label label-success mrm">选修</span>
               {% endif %}
               <a class="text-overflow" href="{{path('course_task_show', {id:task.id,courseId:task.courseId})}}">{{task.title}}</a>
               {% if task.task_result is not defined  or task.task_result.status is empty %}
-              <span class="right-menu mouse-leave">{{task['activity_meta']['length'] | default('')}}<i class="es-icon {{task['activity_meta']['icon']}} mlm"></i></span> 
-              <span class="right-menu mouse-enter color-primary">任务未解锁</span>
+                <span class="right-menu mouse-leave">{{task['activity_meta']['length'] | default('')}}
+                  <i class="es-icon {{task['activity_meta']['icon']}} mlm"></i>
+                </span> 
+                <span class="right-menu mouse-enter color-primary">任务未解锁</span>
               {% else %}
-                <span class="right-menu">{{task['activity_meta']['length'] | default('')}}<i class="es-icon {{task['activity_meta']['icon']}} mlm" data-toggle="tooltip" data-placement="top" title="{{task['activity_meta']['name']}}任务"></i></span>  
+                <span class="right-menu">{{task['activity_meta']['length'] | default('')}}
+                  <i class="es-icon {{task['activity_meta']['icon']}} mlm" data-toggle="tooltip" data-placement="top" title="{{task['activity_meta']['name']}}任务"></i>
+                </span>  
               {% endif %}
             </li>
           {% endfor %}
