--- a/src/Topxia/WebBundle/Resources/views/Marker/index.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Marker/index.html.twig
@@ -14,7 +14,7 @@
     <div class="manage-edit-body">
       <ul class="nav nav-tabs nav-tabs-edit" role="tablist">
         <li role="presentation" class="active"><a href="#practice" aria-controls="practice" role="tab" data-toggle="tab">随堂练习</a></li>
-        <li role="presentation" class="" style="display: none">
+        <li role="presentation" class="">
           <a href="#text-track" aria-controls="text-track" role="tab" data-toggle="tab">字幕</a>
         </li>
         <li class="static" role="presentation">
