--- a/src/Topxia/WebBundle/Resources/views/Subtitle/manage.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Subtitle/manage.html.twig
@@ -4,6 +4,7 @@
     <div class="row">
       <div class="col-md-2 caption-uploader js-select-file" id="uploader" style="width: 130px" 
       data-media-id="{{ media.id }}"
+      data-media-global-id="{{ media.globalId }}"
       data-subtitle-create-url="{{ url('subtitle_create', {courseId: courseId}) }}"
       data-subtitle-list-url="{{ url('subtitle_media_subtitles', {courseId: courseId, mediaId: media.id}) }}"
       data-init-url="{{ url('uploader_init', {token:token}) }}"
