--- a/src/Topxia/WebBundle/Resources/views/Category/explore-nav.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Category/explore-nav.html.twig
@@ -2,10 +2,11 @@
 
 <div class="tabs-wrapper">
   <div class="tabs-group" style="height: 50px;">
-    <div class="title">分类</div>
+    <div class="title">分类:</div>
       <ul class="content clearfix">
+        <li class="{% if not selectedCategory %}active{% endif %}"><a class="nav-link" href="{{ path(path, {tag:tag, filter:filter,orderBy:orderBy}) }}">全部</a></li>
         {% for category in categories %}
-          <li class="{% if category.code == selectedCategory %}active{% endif %}"><a class="nav-link" href="{{ path(path, {category:category.code, tags:tags|join(','), filter:filter,orderBy:orderBy}) }}">{{ category.name }}</a></li>
+          <li class="{% if category.code == selectedCategory %}active{% endif %}"><a class="nav-link" href="{{ path(path, {category:category.code, tag:tag|join(','), filter:filter,orderBy:orderBy}) }}">{{ category.name }}</a></li>
         {% endfor %}
       </ul>
     <a class="js-tabs-toggle tabs-toggle tabs-hide hidden">展开</a>
@@ -15,24 +16,27 @@
     <div class="tabs-group" style="height: 50px;">
      <div class="title"></div>
       <ul class="content clearfix">
+        <li class="{% if not selectedSubCategory %}active{% endif %}"><a class="nav-link" href="{{ path(path, {category:selectedCategory, tag:tag, filter:filter,orderBy:orderBy}) }}">全部</a></li>   
         {% for subCategory in subCategories %}
-          <li class=""><a class="nav-link" href="">{{ subCategory.name }}</a></li>
+          <li class="{% if subCategory.code == selectedSubCategory %}active{% endif %}"><a class="nav-link" href="{{ path(path, {category:selectedCategory, subCategory:subCategory.code, tag:tag, filter:filter,orderBy:orderBy}) }}">{{ subCategory.name }}</a></li>
         {% endfor %}
       </ul>
     </div>
   {% endif %}
 
   {% for tagGroup in tagGroups %}
-    <div class="tabs-group" style="height: 50px;">
-        <div class="title">{{ tagGroup.name }}</div>
-        <ul class="content clearfix">
-          {% for tag in tagGroup.subs %}
-            <li class="{% if tag.id in tags %}active{% endif %}" ><a class="nav-link" href="{{ path(path, {category:selectedCategory, tag:tag.id, tags:tags|join(','), filter:filter, orderBy:orderBy}) }}">{{ tag.name }}</a></li>
-          {% endfor %}
-        </ul>
-      <div class="title"></div>
-      <a class="js-tabs-toggle tabs-toggle tabs-hide hidden">展开</a>
-    </div>
+    {% if 'course' in tagGroup.scope %}
+      <div class="tabs-group" style="height: 50px;">
+          <div class="title">{{ tagGroup.name }}:</div>
+          <ul class="content clearfix">
+            {% for sub in tagGroup.subs %}
+              <li class="{% if sub.id == tag %}active{% endif %}" ><a class="nav-link" href="{{ path(path, {category:selectedCategory, subCategory:selectedSubCategory, tag:tag, selectedTag:sub.id, filter:filter, orderBy:orderBy}) }}">{{ sub.name }}</a></li>
+            {% endfor %}
+          </ul>
+        <div class="title"></div>
+        <a class="js-tabs-toggle tabs-toggle tabs-hide hidden">展开</a>
+      </div>
+    {% endif %}
   {% endfor %}
 </div>
 
