--- a/src/Topxia/AdminBundle/Resources/views/Tag/list-tr.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Tag/list-tr.html.twig
@@ -1,7 +1,11 @@
 <tr id="tag-tr-{{ tag.id }}">
   <td>{{ tag.id }}</td>
   <td>{{ tag.name }}</td>
-  <td>{{ tagRelations[tag.id].name|default('') }}</td>
+  <td>
+  {% for tagRelation in tagRelations[tag.id] %}
+    {{ tagRelation.name }}
+  {% endfor %}
+  </td>
   <td>{{ tag.createdTime|date('Y-m-d H:i') }}</td>
   <td>
     <button class="btn btn-default btn-sm" data-url="{{ path('admin_tag_update', {id: tag.id}) }}" data-toggle="modal" data-target="#modal">{{'编辑'|trans}}</button>
