--- a/src/Topxia/WebBundle/Resources/views/Category/explore-nav.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Category/explore-nav.html.twig
@@ -1,7 +1,7 @@
 {% do load_script('category/nav') %}
 
 <div class="tabs-wrapper">
-  <div class="tabs-group" style="height: 50px;">
+  <div class="tabs-group">
     <div class="title">分类:</div>
       <ul class="content clearfix">
         <li class="{% if not selectedCategory %}active{% endif %}"><a class="nav-link" href="{{ path(path, {tag:{tags:tags}, filter:filter,orderBy:orderBy}) }}">全部</a></li>
@@ -9,11 +9,10 @@
           <li class="{% if category.code == selectedCategory %}active{% endif %}"><a class="nav-link" href="{{ path(path, {category:category.code, tag:{tags:tags}, filter:filter,orderBy:orderBy}) }}">{{ category.name }}</a></li>
         {% endfor %}
       </ul>
-    <a class="js-tabs-toggle tabs-toggle tabs-hide hidden">展开</a>
   </div>
 
   {% if subCategories|default(null) %}
-    <div class="tabs-group" style="height: 50px;">
+    <div class="tabs-group" >
      <div class="title"></div>
       <ul class="content clearfix">
         <li class="{% if not selectedSubCategory %}active{% endif %}"><a class="nav-link" href="{{ path(path, {category:selectedCategory, tag:{tags:tags}, filter:filter,orderBy:orderBy}) }}">全部</a></li>   
@@ -26,7 +25,7 @@
 
   {% for tagGroup in tagGroups %}
     {% if 'course' in tagGroup.scope %}
-      <div class="tabs-group" style="height: 50px;">
+      <div class="tabs-group">
           <div class="title">{{ tagGroup.name }}:</div>
           <ul class="content clearfix">
             {% for sub in tagGroup.subs %}
