--- a/src/Topxia/AdminBundle/Resources/views/System/user-center.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/user-center.html.twig
@@ -125,7 +125,7 @@
     <div class="row form-group with-phpwind" style="display:none;">
       <div class="col-md-3 control-label"><label>{{'WindId配置'|trans}}</label></div>
       <div class="controls col-md-8">
-        <div class="help-block">{{'如使用phpwind (WindID)的用户中心，请填写此项配置。'|trans}}<a href="http://qiqiuyu.edusoho.com/course/125" target="_blank">{{'如何配置？'|trans}}</a></div>
+        <div class="help-block"><a href="http://qiqiuyu.edusoho.com/course/125" target="_blank">{{'如何配置？'|trans}}</a></div>
       </div>
     </div>
 
