显示批量创建课时的btn

--- a/src/Topxia/WebBundle/Resources/views/CourseLessonManage/index.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseLessonManage/index.html.twig
@@ -26,7 +26,7 @@
 				    <div class="popover-item">
 				      <div class="content">
 				      	{{ '批量创建课时需要开通云视频服务，点击' }} 
-				      	<a href="http://open.edusoho.com/show/cloud/video">{{ '这里'|trans }}</a>
+				      	<a href="http://open.edusoho.com/show/cloud/video" target="__blank">{{ '这里'|trans }}</a>
 				       {{ '了解详情'|trans }}
 				      </div>
 				    </div>
