--- a/src/Classroom/ClassroomBundle/Resources/views/ClassroomManage/set-info.html.twig
+++ b/src/Classroom/ClassroomBundle/Resources/views/ClassroomManage/set-info.html.twig
@@ -39,7 +39,7 @@ tagMatchUrl: path('tag_match'),
       <div class="form-group">
         <label class="col-md-2 control-label">{{ '标签'|trans }}</label>
         <div class="col-md-8 controls">
-          <input type="text" id="course_tags" name="tags" required="required" class="width-full select2-offscreen"
+          <input type="text" id="classroom_tags" name="tags" required="required" class="width-full select2-offscreen"
                  tabindex="-1" value="{{ tags|join(',') }}"
                  data-explain="{{ '用于按标签搜索课程、相关课程的提取等，由网校管理员后台统一管理'|trans }}">
           <div class="help-block">{{ '用于按标签搜索课程、相关课程的提取等，由网校管理员后台统一管理'|trans }}</div>
