--- a/src/Topxia/AdminBundle/Resources/views/Tag/list-tr.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Tag/list-tr.html.twig
@@ -3,7 +3,7 @@
   <td>{{ tag.name }}</td>
   <td>
   {% for tagRelation in tagRelations[tag.id] %}
-    {{ tagRelation.name }}
+    {{ tagRelation.groupName }}
   {% endfor %}
   </td>
   <td>{{ tag.createdTime|date('Y-m-d H:i') }}</td>
