--- a/src/Topxia/WebBundle/Resources/views/Category/explore-nav.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Category/explore-nav.html.twig
@@ -1,6 +1,6 @@
 {% do load_script('category/nav') %}
 
-<div class="tabs-wrapper">
+<div class="tabs-wrapper bg-blank">
   <div class="tabs-group">
     <div class="title">分类:</div>
       <ul class="content clearfix">
@@ -32,8 +32,6 @@
               <li class="{% if tag_equal(tags, sub.id, tagGroup.id) %}active{% endif %}" ><a class="nav-link tag" href="{{ path(path, {category:selectedCategory, subCategory:selectedSubCategory, tag:{tags:tags, selectedTag:{group:tagGroup.id, tag:sub.id}}, filter:filter, orderBy:orderBy}) }}">{{ sub.name }}</a></li>
             {% endfor %}
           </ul>
-        <div class="title"></div>
-        <a class="js-tabs-toggle tabs-toggle tabs-hide hidden">展开</a>
       </div>
     {% endif %}
   {% endfor %}
