--- a/src/Topxia/WebBundle/Resources/views/Course/Part/normal-header.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/Part/normal-header.html.twig
@@ -128,14 +128,23 @@
           {% if course.price > 0 %}
             {{'请重新'|trans}}<a class="btn-link" href="{{ path('vip') }}" target="_blank">{{'开通会员'|trans}}</a>
           {% else %}
-            <a class="btn-link js-exit-course" data-url="{{ path('course_exit', { id:course.id }) }}" data-go="{{ path('course_show', { id:course.id }) }}">{{'返回课程首页'|trans}}</a>
+            {% if member.joinedType == 'course' %}
+              <a class="btn-link js-exit-course" data-url="{{ path('course_exit', { id:course.id }) }}" data-go="{{ path('course_show', { id:course.id }) }}">{{'返回课程首页'|trans}}</a>
+            {% elseif member.joinedType == 'classroom' %}
+              <a class="btn-link js-exit-course" data-url="{{ path('classroom_exit', { id:member.classroomId }) }}" data-go="{{ path('classroom_show', { id:member.classroomId }) }}">{{'返回' ~ setting('classroom.name', '班级') ~ '首页'|trans}}</a>
+            {% endif %}
           {% endif %}！
         {% elseif userVipStatus == 'member_expired' %}
           {{'您的会员已过期，不能学习此课程，请先'|trans}}<a class="btn-link" href="{{ path('vip_renew') }}" target="_blank">{{'续费'|trans}}</a>{{'。'|trans}}
         {% elseif userVipStatus == 'level_low' %}
           {{'会员等级不够，不能学习此课程。请先'|trans}}<a class="btn-link" href="{{ path('vip_upgrade') }}" target="_blank">{{'升级会员'|trans}}</a>{{'。'|trans}}
         {% else %}
-          {{'此课程已不支持会员免费学，'|trans}}<a class="btn-link js-exit-course" href="javascript:;" data-url="{{ path('course_exit', { id:course.id }) }}" data-go="{{ path('course_show', { id:course.id }) }}">{{'返回课程首页'|trans}}</a>
+          {% if member.joinedType == 'course' %}
+            {{'此课程已不支持会员免费学，'|trans}}<a class="btn-link js-exit-course" href="javascript:;" data-url="{{ path('course_exit', { id:course.id }) }}" data-go="{{ path('course_show', { id:course.id }) }}">{{'返回课程首页'|trans}}</a>
+          {% elseif member.joinedType == 'classroom' %}
+            {{'此课程已不支持会员免费学，'|trans}}<a class="btn-link js-exit-course" href="javascript:;" data-url="{{ path('classroom_exit', { id:member.classroomId }) }}" data-go="{{ path('classroom_show', { id:member.classroomId }) }}">{{'返回' ~ setting('classroom.name', '班级') ~ '首页'|trans}}</a>
+          {% endif %}
+
         {% endif %}
       </div>
     {% endif %}
