--- a/src/Topxia/WebBundle/Resources/views/Course/Part/normal-header.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/Part/normal-header.html.twig
@@ -131,7 +131,7 @@
             {% if member.joinedType == 'course' %}
               <a class="btn-link js-exit-course" data-url="{{ path('course_exit', { id:course.id }) }}" data-go="{{ path('course_show', { id:course.id }) }}">{{'返回课程首页'|trans}}</a>
             {% elseif member.joinedType == 'classroom' %}
-              <a class="btn-link js-exit-course" data-url="{{ path('classroom_exit', { id:member.classroomId }) }}" data-go="{{ path('classroom_show', { id:member.classroomId }) }}">{{'返回' ~ setting('classroom.name', '班级') ~ '首页'|trans}}</a>
+              <a class="btn-link js-exit-course" data-url="{{ path('classroom_exit', { id:member.classroomId }) }}" data-go="{{ path('classroom_show', { id:member.classroomId }) }}">{{'退出' ~ setting('classroom.name', '班级')|trans}}</a>
             {% endif %}
           {% endif %}！
         {% elseif userVipStatus == 'member_expired' %}
@@ -142,7 +142,7 @@
           {% if member.joinedType == 'course' %}
             {{'此课程已不支持会员免费学，'|trans}}<a class="btn-link js-exit-course" href="javascript:;" data-url="{{ path('course_exit', { id:course.id }) }}" data-go="{{ path('course_show', { id:course.id }) }}">{{'返回课程首页'|trans}}</a>
           {% elseif member.joinedType == 'classroom' %}
-            {{'此课程已不支持会员免费学，'|trans}}<a class="btn-link js-exit-course" href="javascript:;" data-url="{{ path('classroom_exit', { id:member.classroomId }) }}" data-go="{{ path('classroom_show', { id:member.classroomId }) }}">{{'返回' ~ setting('classroom.name', '班级') ~ '首页'|trans}}</a>
+            {{'此' ~ setting('classroom.name', '班级') ~ '课程已不支持会员免费学，'|trans}}<a class="btn-link js-exit-course" href="javascript:;" data-url="{{ path('classroom_exit', { id:member.classroomId }) }}" data-go="{{ path('classroom_show', { id:member.classroomId }) }}">{{'退出' ~ setting('classroom.name', '班级')|trans}}</a>
           {% endif %}
 
         {% endif %}
