--- a/src/WebBundle/Resources/views/TaskManage/list.html.twig
+++ b/src/WebBundle/Resources/views/TaskManage/list.html.twig
@@ -1,14 +1,17 @@
 {% extends 'TopxiaWebBundle:CourseManage:layout.html.twig' %}
 {% block title %}{{ '教学计划管理'|trans }} - {{ parent() }}{% endblock %}
-{% set use_webapck_loader = true %}
+
+
+{% set side_nav = 'task' %}
 
 {% do css(['web.css']) %}
 {% do script(['libs/jquery-sortable.js','web/task-manage/index.js']) %}
 
+
 {% block main %}
   <div class="panel panel-default panel-col lesson-manage-panel">
     <div class="panel-heading">
-      {{'教学计划管理'|trans}}
+      {{'教学计划管理'|trans}}/我是其中一个教学计划
       <button class="btn btn-success btn-sm pull-right">发布计划</button>
     </div>
     <div class="panel-body">
