--- a/src/WebBundle/Resources/views/CourseManage/layout.html.twig
+++ b/src/WebBundle/Resources/views/CourseManage/layout.html.twig
@@ -1,17 +1,10 @@
-{#{% extends 'TopxiaWebBundle:CourseManage:layout.html.twig' %}
-
-
-{% block main %}{% endblock %}#}
 {% extends 'TopxiaWebBundle::layout.html.twig' %}
 
 {% block title %}{{'课程管理'|trans}} - {{ parent() }}{% endblock %}
-
 {% do css(['web.css']) %}
 
 {% block content %}
-
 {{ render(controller('TopxiaWebBundle:Course:header', {course:course, manage: true})) }}
-
 <div class="row">
   <div class="col-md-3">
     {% block side %}
@@ -84,90 +77,17 @@
             </a>
           </li>
         </ul>
-        {#<ul class="list-group">
-          <li class="list-group-heading">{{'课程设置'|trans}}</li>
-          <li class="list-group-item {% if side_nav == 'price' %}active{% endif %}">
-            <a href="{% if course.locked|default(0) == 1 %}
-            {{ path('course_manage_course_sync', {id:course.id,type:'price'}) }}{% else %}
-            {{ path('course_manage_price', {id:course.id}) }}
-            {% endif %}">
-              <span {% if course.locked|default(0) == 1 %}class="es-icon es-icon-lock" aria-hidden="true" {% endif %}></span>{{'价格设置'|trans}}
-            </a>
-          </li>
-          <li class="list-group-item {% if side_nav == 'teachers' %}active{% endif %}">
-            <a href="{% if course.locked|default(0) == 1 %}
-            {{ path('course_manage_course_sync', {id:course.id,type:'teachers'}) }}{% else %}
-            {{ path('course_manage_teachers', {id:course.id}) }}
-            {% endif %}">
-              <span {% if course.locked|default(0) == 1 %}class="es-icon es-icon-lock" aria-hidden="true" {% endif %}></span>{{'教师设置'|trans}}
-            </a>
-          </li>
-          <li class="list-group-item {% if side_nav == 'students' %}active{% endif %}">
-            <a href="{{ path('course_manage_students', {id:course.id}) }}">
-              <span></span>{% if setting('default.user_name') %}{{setting('default.user_name')|default('学员'|trans)}}{% endif %}{{'管理'|trans}}
-            </a>
-          </li>
-        </ul>#}
-        {#<ul class="list-group">
-          <li class="list-group-heading">{{'题库'|trans}}</li>
-          <li class="list-group-item {% if side_nav == 'question' %}active{% endif %}">
-            <a href="{% if course.locked|default(0) == 1 %}
-            {{ path('course_manage_course_sync', {id:course.id,type:'question'}) }}{% else %}
-            {{ path('course_manage_question', {courseId:course.id}) }}
-            {% endif %}">
-              <span {% if course.locked|default(0) == 1 %}class="es-icon es-icon-lock" aria-hidden="true" {% endif %}></span>{{'题目管理'|trans}}
-            </a>
-          </li>
-
-          {% if is_plugin_installed('QuestionPlus') and setting('question_plus.enabled') %}
-            <li class="list-group-item {% if side_nav == 'question_plumber' %}active{% endif %}">
-              <a href="{% if course.locked|default(0) == 1 %}
-              {{ path('course_manage_course_sync', {id:course.id,type:'question_plumber'}) }}{% else %}
-              {{ path('course_question_plumber', {courseId:course.id, type:'import'}) }}
-              {% endif %}">
-                <span {% if course.locked|default(0) == 1 %}class="es-icon es-icon-lock" aria-hidden="true" {% endif %}></span>{{'题目导入/导出'|trans}}
-              </a>
-            </li>
-          {% endif %}
-
-          <!-- <li class="list-group-item {% if side_nav == 'question_category' %}active{% endif %}">
-            <a href="{{ path('course_manage_question_category', {courseId:course.id}) }}">题目类别管理</a>
-          </li> -->
-
-          
-          <li class="list-group-item {% if side_nav == 'testCheck' %}active{% endif %}">
-            <a href="{{ path('course_manage_test_check', {id:course.id, status:'reviewing'}) }}"><span></span>{{'试卷批阅'|trans}}</a>
-          </li>
-          {% if is_plugin_installed('Homework') %}
-            <li class="list-group-item {% if side_nav == 'homeworkCheck' %}active{% endif %}">
-              <a href="{{ path('course_homework_check_list', {courseId:course.id,status:'reviewing'}) }}"><span></span>{{'作业批改'|trans}}</a>
-            </li>
-          {% endif %}
-        </ul>#}
-        {#<ul class="list-group">
-          <li class="list-group-heading">{{'课程运营'|trans}}</li>
-          <li class="list-group-item {% if side_nav == 'course_manage_data' %}active{% endif %}">
-            <a href="{{path('course_manage_data',{id:course.id})}}">
-              <span></span>{{'课程学习数据'|trans}}</a>
-          </li>
-
-          {% if app.user.isAdmin() or setting('course.teacher_search_order') == 1 %}
-            <li class="list-group-item {% if side_nav == 'course_manage_order' %}active{% endif %}">
-              <a href="{{path('course_manage_order',{id:course.id})}}"><span></span>{{'课程订单查询'|trans}}</a>
-            </li>
-          {% endif %}
-        </ul>#}
         <ul class="list-group">
           <li class="list-group-heading">{{'默认教学计划'|trans}}</li>
-          <li class="list-group-item {% if side_nav == 'default_task' %}active{% endif %}">
+          <li class="list-group-item {% if side_nav == 'task' %}active{% endif %}">
             <a href="">
               <span></span>{{'计划任务'|trans}}</a>
           </li>
-          <li class="list-group-item {% if side_nav == 'default_task' %}active{% endif %}">
+          <li class="list-group-item {% if side_nav == '' %}active{% endif %}">
             <a href="">
               <span></span>{{'计划设置'|trans}}</a>
           </li>
-          <li class="list-group-item {% if side_nav == 'default_task' %}active{% endif %}">
+          <li class="list-group-item {% if side_nav == '' %}active{% endif %}">
             <a href="">
               <span></span>{{'营销设置'|trans}}</a>
           </li>
@@ -204,7 +124,7 @@
         </ul>
         <ul class="list-group">
           <li class="list-group-heading">{{'教学计划管理'|trans}}</li>
-          <li class="list-group-item {% if side_nav == 'task' %}active{% endif %}">
+          <li class="list-group-item {% if side_nav == 'plan' %}active{% endif %}">
            <a href="">
               <span></span>{{'教学计划列表'|trans}}</a>
           </li>
