--- a/src/WebBundle/Resources/views/planManage/list.html.twig
+++ b/src/WebBundle/Resources/views/planManage/list.html.twig
@@ -1,4 +1,5 @@
 {% extends 'WebBundle:CourseManage:layout.html.twig' %}
+
 {% block title %}{{ '教学计划列表'|trans }} - {{ parent() }}{% endblock %}
 {% set side_nav = 'plan' %}
 {% set use_webapck_loader = true %}
@@ -9,7 +10,50 @@
       {{'教学计划列表'|trans}}
     </div>
     <div class="panel-body">
-      
+      <div class="plan-list">
+        <div class="plan-item">
+          <div class="title clearfix"><span class="color-primary">(已启用)</span>默认教学计划
+            <div class="dropdown pull-right">
+              <button class="btn btn-primary btn-sm" data-toggle="dropdown">
+                <i class="es-icon es-icon-keyboardarrowdown mrs"></i>编辑计划
+              </button>
+              <ul class="dropdown-menu">
+                <li><a>删除</a></li>
+              </ul>
+            </div>
+          </div>
+          <ul class="row bottom">
+            <li class="col-xs-2"><i class="es-icon es-icon-book mrs"></i>16</li>
+            <li class="col-xs-2"><i class="es-icon es-icon-person mrs"></i>600</li>
+            <li class="col-xs-8">
+              <i class="es-icon es-icon-money mrs"></i>3200
+              <span class="label label-warning mll">会员免费</span>
+              <span class="label label-warning mll">6折</span>
+            </li>
+          </ul>
+        </div>
+        <div class="plan-item">
+          <div class="title clearfix"><span class="color-danger">(已关闭)</span>默认教学计划
+            <div class="dropdown pull-right">
+              <button class="btn btn-primary btn-sm" data-toggle="dropdown">
+                <i class="es-icon es-icon-keyboardarrowdown mrs"></i>编辑计划
+              </button>
+              <ul class="dropdown-menu">
+                <li><a>删除</a></li>
+              </ul>
+            </div>
+          </div>
+          <ul class="row bottom">
+            <li class="col-xs-2"><i class="es-icon es-icon-book mrs"></i>16</li>
+            <li class="col-xs-2"><i class="es-icon es-icon-person mrs"></i>600</li>
+            <li class="col-xs-8">
+              <i class="es-icon es-icon-money mrs"></i>3200
+              <span class="label label-warning mll">会员免费</span>
+              <span class="label label-warning mll">6折</span>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
 {% endblock %}
