--- a/src/WebBundle/Resources/views/planManage/list.html.twig
+++ b/src/WebBundle/Resources/views/planManage/list.html.twig
@@ -10,50 +10,36 @@
       {{'教学计划列表'|trans}}
     </div>
     <div class="panel-body">
-      <div class="plan-list">
-        <div class="plan-item">
-          <div class="title clearfix"><span class="color-primary">(已启用)</span>默认教学计划
-            <div class="dropdown pull-right">
-              <button class="btn btn-primary btn-sm" data-toggle="dropdown">
-                <i class="es-icon es-icon-keyboardarrowdown mrs"></i>编辑计划
-              </button>
-              <ul class="dropdown-menu">
-                <li><a>删除</a></li>
-              </ul>
-            </div>
-          </div>
-          <ul class="row bottom">
-            <li class="col-xs-2"><i class="es-icon es-icon-book mrs"></i>16</li>
-            <li class="col-xs-2"><i class="es-icon es-icon-person mrs"></i>600</li>
-            <li class="col-xs-8">
-              <i class="es-icon es-icon-money mrs"></i>3200
-              <span class="label label-warning mll">会员免费</span>
-              <span class="label label-warning mll">6折</span>
-            </li>
-          </ul>
-        </div>
-        <div class="plan-item">
-          <div class="title clearfix"><span class="color-danger">(已关闭)</span>默认教学计划
-            <div class="dropdown pull-right">
-              <button class="btn btn-primary btn-sm" data-toggle="dropdown">
-                <i class="es-icon es-icon-keyboardarrowdown mrs"></i>编辑计划
-              </button>
-              <ul class="dropdown-menu">
-                <li><a>删除</a></li>
-              </ul>
-            </div>
-          </div>
-          <ul class="row bottom">
-            <li class="col-xs-2"><i class="es-icon es-icon-book mrs"></i>16</li>
-            <li class="col-xs-2"><i class="es-icon es-icon-person mrs"></i>600</li>
-            <li class="col-xs-8">
-              <i class="es-icon es-icon-money mrs"></i>3200
-              <span class="label label-warning mll">会员免费</span>
-              <span class="label label-warning mll">6折</span>
-            </li>
-          </ul>
-        </div>
-      </div>
+      <table class="table table-striped">
+        <thead>
+          <th>名称</th>
+          <th>任务数</th>
+          <th>学员</th>
+          <th>价格（元）</th>
+          <th>编辑</th>
+        </thead>
+        <tbody>
+          <tr>
+            <td>默认教学计划<span class="label label-warning mll">会员免费</span>
+              <span class="label label-warning mll">6折</span></td>
+            <td>16</td>
+            <td>2000</td>
+            <td>100.00</td>
+            <td>
+              <div class="btn-group">
+                <a class="btn btn-default btn-sm" href="/course/1/tasks">编辑</a>
+                <a href="#" type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown">
+                  <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu pull-right">
+                  <li><a href="/course/4/manage/lesson"></a></li>
+                  <li><a href="/course/4/manage/files">删除</a></li>
+                </ul>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
 {% endblock %}
