course2.0-question-refactor-fix

--- a/src/WebBundle/Resources/views/ChoiceQuestion/form.html.twig
+++ b/src/WebBundle/Resources/views/ChoiceQuestion/form.html.twig
@@ -1,4 +1,4 @@
-{% extends 'WebBundle:QuestionManage/Part:form-base-layout.html.twig' %}
+{% extends 'WebBundle:QuestionManage:question-form-layout.html.twig' %}
 
 {% block question_extra_fields %}
 
