--- a/src/WebBundle/Resources/views/MaterialQuestion/form.html.twig
+++ b/src/WebBundle/Resources/views/MaterialQuestion/form.html.twig
@@ -1,4 +1,4 @@
-{% extends 'WebBundle:QuestionManage/Part:form-base-layout.html.twig' %}
+{% extends 'WebBundle:QuestionManage:question-form-layout.html.twig' %}
 
 {% set question_stem_label = '材料'|trans %}
 
