--- a/src/WebBundle/Resources/views/QuestionManage/question-tr.html.twig
+++ b/src/WebBundle/Resources/views/QuestionManage/question-tr.html.twig
@@ -6,23 +6,23 @@
       {{ question.stem |fill_question_stem_text| plain_text(40) }}
     </a>
     <div>
-      {% set target = targets[question.target]|default(null) %}
-      {% if target.type|default(null) != 'course' %}
-        <small class="text-muted">{{'从属于%simple_name%'|trans({'%simple_name%': targets[question.target].simple_name|default(''|trans)})}}</small>
+      {% if question.lessonId|default(0) > 0 %}
+        <small class="text-muted">{{'从属于%simple_name%'|trans({'%simple_name%': question.lessonId})}}</small>
       {% else %}
         <small class="text-muted">{{'从属于 本课程'|trans}}</small>
       {% endif %}
-      {% if question.type == 'material'%}
-        {% if  question.subCount == 0  %}
-          <span class="label label-danger">{{'未完成'|trans}}</span>
-        {% endif %}
+
+      {% if question.type == 'material' and not question.subCount %}
+        <span class="label label-danger">{{'未完成'|trans}}</span>
       {% endif %}
     </div>
 
   </td>
   <td>
-  {{ dict('questionType')[question.type] }}
-  {% if question.type == 'material'%}<br><small class="text-muted">({{ question.subCount }}{{'子题'|trans}})</small>{% endif %}
+    {{ dict_text('questionType',question.type) }}
+    {% if question.type == 'material'%}
+      <br><small class="text-muted">({{ question.subCount }}{{'子题'|trans}})</small>
+    {% endif %}
   </td>
   <td>
     {{ macro.user_link(users[question.userId]) }}
