--- a/src/Topxia/WebBundle/Resources/views/CourseManage/base.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseManage/base.html.twig
@@ -79,7 +79,7 @@ isCoursePublished: course.status,
             {% else %}
               {{ radios('expiryMode', {'date':'截止日期'|trans, 'days':'有效期天数'|trans,'none':'无'|trans}, course.expiryMode|default('none')) }}
             {% endif %}
-            <div class="help-block">{{ '有效期方式一旦选定，课程发布后无法更改。'|trans }}</div>
+            <div class="help-block">{{ '已发布课程无法修改有效期方式，如需要修改，请关闭课程后再设置；有效期变更，不影响已经加入课程的学员。'|trans }}</div>
           </div>
         </div>
         <div class="form-group expiry-day-js {% if course.expiryMode|default('none') == 'none' %} hidden {% endif %}">
