--- a/src/Topxia/WebBundle/Resources/views/Subtitle/manage.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Subtitle/manage.html.twig
@@ -21,4 +21,4 @@
     <div class="text-track-overview mrm"></div>
   </div>
 </div>
-<script type="text/javascript">app.load('marker/subtitle')</script>
+{% do load_script('marker/subtitle') %}
