--- a/web/assets/v2/less/page/question-tr.less
+++ b/web/assets/v2/less/page/question-tr.less
@@ -182,7 +182,9 @@
  
 .marker-manage-content {
   height: 100%;
-  padding-bottom: 160px;
+  &.question{
+    padding-bottom: 160px;
+  }
   .manage-player-body {
     position: relative;
     padding-top: 60px;
