--- a/web/assets/v2/css/main.css
+++ b/web/assets/v2/css/main.css
@@ -12842,6 +12842,8 @@ textarea {
 }
 .marker-manage-content {
   height: 100%;
+}
+.marker-manage-content.question {
   padding-bottom: 160px;
 }
 .marker-manage-content .manage-player-body {
