--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/cloud-search-setting.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/cloud-search-setting.html.twig
@@ -21,8 +21,7 @@
     <div class="row form-group">
       <div class="help-block">
         </br></br>
-        <p style="text-align:center;font-size:16px">{{'云搜索服务由EduSoho教育云提供'|trans}} <a href="http://open.edusoho.com/educloud"
-                                                                           target="_blank">{{'了解详情'|trans}}</a></p>
+        <p style="text-align:center;font-size:16px">{{'云搜索服务由EduSoho教育云提供'|trans}} <a href="http://open.edusoho.com/educloud" target="_blank">{{'了解详情'|trans}}</a></p>
         </br>
       </div>
     </div>
